added a recyclerview to the learning fragment

--- a/app/src/main/res/layout/fragment_learning_leaders.xml
+++ b/app/src/main/res/layout/fragment_learning_leaders.xml
@@ -5,12 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".LearningLeaders">
 
-    <!-- TODO: Update blank fragment layout -->
-
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Learning Leaders" />
+        android:orientation="vertical">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/learning_leaders_recycler"
+            tools:listitem="@layout/learning_recyclerview_row"/>
+
+    </LinearLayout>
 
 </FrameLayout>
