--- a/app/src/main/res/layout/fragment_skill_i_q_leaders.xml
+++ b/app/src/main/res/layout/fragment_skill_i_q_leaders.xml
@@ -5,10 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".SkillIQLeaders">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Skill IQ Leaders" />
+        android:orientation="vertical">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/skill_iq_leaders_recycler"
+            tools:listitem="@layout/skill_iq_recyclerview_row"/>
+
+    </LinearLayout>
 
 </FrameLayout>
