--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:background="@color/black"
     android:layout_height="match_parent"
-    tools:context=".SplashActivity">
+    tools:context=".ui.main.SplashActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
