--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/black"
     android:layout_height="match_parent"
-    tools:context=".ui.main.SplashActivity">
+    tools:context=".ui.view.SplashActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="250dp"
