--- a/app/src/main/res/layout/learning_recyclerview_row.xml
+++ b/app/src/main/res/layout/learning_recyclerview_row.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/top_learner_name"
             android:layout_marginTop="5dp"
+            android:id="@+id/top_learner_hours_country"
             android:layout_marginLeft="16dp"
             android:layout_toRightOf="@+id/top_learner_badge"
             android:text="223 learning hours, Kenya" />
