worked on the skills tab

--- a/app/src/main/res/layout/skill_iq_recyclerview_row.xml
+++ b/app/src/main/res/layout/skill_iq_recyclerview_row.xml
@@ -29,6 +29,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/skill_iq_score_country"
             android:layout_below="@+id/skill_iq_leader_name"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="16dp"
