--- a/app/src/main/res/layout/activity_project_submission.xml
+++ b/app/src/main/res/layout/activity_project_submission.xml
@@ -41,6 +41,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#ffcc33"
+                android:textSize="18sp"
                 android:layout_centerHorizontal="true"
                 android:text="Project Submission" />
         </RelativeLayout>
@@ -116,6 +118,7 @@
         android:paddingStart="55dp"
         android:paddingEnd="55dp"
         android:text="Submit"
+        android:textSize="18sp"
         android:textColor="@color/white"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="@+id/project_github_link"
