--- a/app/src/main/res/layout/activity_project_submission.xml
+++ b/app/src/main/res/layout/activity_project_submission.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout2"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,44 +38,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#ffcc33"
-                android:textSize="18sp"
                 android:layout_centerHorizontal="true"
-                android:text="Project Submission" />
+                android:text="Project Submission"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+                android:textColor="#ffcc33"
+                android:textSize="18sp" />
         </RelativeLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <EditText
         android:id="@+id/first_name"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/proj_submit_box"
-        android:ems="10"
         android:hint="Full Name"
+        android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/last_name"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />
 
     <EditText
         android:id="@+id/last_name"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/proj_submit_box"
-        android:ems="10"
         android:hint="Last Name"
+        android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/first_name"
         app:layout_constraintTop_toTopOf="@+id/first_name" />
 
@@ -83,46 +84,46 @@
         android:id="@+id/email_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/proj_submit_box"
-        android:ems="10"
         android:hint="Email Address"
+        android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@+id/last_name"
         app:layout_constraintStart_toStartOf="@+id/first_name"
-        app:layout_constraintTop_toBottomOf="@+id/first_name" />
+        app:layout_constraintTop_toBottomOf="@+id/last_name" />
 
     <EditText
         android:id="@+id/project_github_link"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/proj_submit_box"
-        android:ems="10"
         android:hint="Project on Github (link)"
+        android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@+id/email_address"
         app:layout_constraintStart_toStartOf="@+id/email_address"
         app:layout_constraintTop_toBottomOf="@+id/email_address" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_submit_project"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="123dp"
         android:layout_marginTop="62dp"
+        android:layout_marginEnd="122dp"
         android:background="@drawable/project_submit_button_box"
         android:paddingStart="55dp"
         android:paddingEnd="55dp"
         android:text="Submit"
-        android:textSize="18sp"
-        android:textColor="@color/white"
         android:textAllCaps="false"
-        app:layout_constraintEnd_toEndOf="@+id/project_github_link"
-        app:layout_constraintStart_toStartOf="@+id/project_github_link"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/project_github_link" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
