--- a/app/src/main/res/layout/are_you_sure_dialog.xml
+++ b/app/src/main/res/layout/are_you_sure_dialog.xml
@@ -32,7 +32,7 @@
         android:layout_toRightOf="@id/are_you_sure"
         android:src="@drawable/question" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Yes"
