refactored my layouts

--- a/app/src/main/res/layout/activity_project_submission.xml
+++ b/app/src/main/res/layout/activity_project_submission.xml
@@ -43,9 +43,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:text="Project Submission"
+                android:text="@string/project_submission"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-                android:textColor="#ffcc33"
+                android:textColor="@color/main"
                 android:textSize="18sp" />
         </RelativeLayout>
     </com.google.android.material.appbar.AppBarLayout>
@@ -58,10 +58,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/proj_submit_box"
-        android:hint="Full Name"
+        android:hint="@string/full_name"
         android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        android:autofillHints=""
         app:layout_constraintEnd_toStartOf="@+id/last_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />
@@ -72,10 +73,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:background="@drawable/proj_submit_box"
-        android:hint="Last Name"
+        android:hint="@string/last_name"
         android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        android:autofillHints=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/first_name"
         app:layout_constraintTop_toTopOf="@+id/first_name" />
@@ -86,10 +88,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:background="@drawable/proj_submit_box"
-        android:hint="Email Address"
+        android:hint="@string/email_address"
         android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        android:autofillHints=""
         app:layout_constraintEnd_toEndOf="@+id/last_name"
         app:layout_constraintStart_toStartOf="@+id/first_name"
         app:layout_constraintTop_toBottomOf="@+id/last_name" />
@@ -100,10 +103,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:background="@drawable/proj_submit_box"
-        android:hint="Project on Github (link)"
+        android:hint="@string/project_on_github_link"
         android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        android:autofillHints=""
         app:layout_constraintEnd_toEndOf="@+id/email_address"
         app:layout_constraintStart_toStartOf="@+id/email_address"
         app:layout_constraintTop_toBottomOf="@+id/email_address" />
@@ -112,13 +116,11 @@
         android:id="@+id/btn_submit_project"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="123dp"
         android:layout_marginTop="62dp"
-        android:layout_marginEnd="122dp"
         android:background="@drawable/project_submit_button_box"
         android:paddingStart="55dp"
         android:paddingEnd="55dp"
-        android:text="Submit"
+        android:text="@string/submit"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="18sp"
