--- a/app/src/main/res/layout/my_toolbar.xml
+++ b/app/src/main/res/layout/my_toolbar.xml
@@ -8,19 +8,19 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:title="LEADERBOARD"
+        app:title="@string/toolbar_title"
         app:titleTextColor="@color/white"
         style="@style/Widget.MaterialComponents.Toolbar.Primary">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Submit"
+            android:text="@string/submit"
             android:minHeight="30dp"
             android:id="@+id/action_bar_submit"
             android:textAllCaps="false"
-            android:layout_marginRight="16dp"
-            android:layout_gravity="right"
+            android:layout_marginEnd="16dp"
+            android:layout_gravity="end"
             android:textColor="@color/black"
             android:background="@drawable/submit_box"/>
     </com.google.android.material.appbar.MaterialToolbar>
