--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,8 +8,10 @@
     tools:context=".ui.view.SplashActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:scaleType="centerInside"
         android:src="@drawable/gads_banner"
         app:layout_constraintBottom_toBottomOf="parent"
