--- a/app/src/main/res/drawable/project_submit_button_box.xml
+++ b/app/src/main/res/drawable/project_submit_button_box.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="1dp"></stroke>
     <corners android:radius="25dp"></corners>
-    <gradient android:type="linear" android:startColor="#ffb347"
-        android:endColor="#ffcc33" ></gradient>
+    <gradient android:type="linear" android:startColor="#ffcc33"
+        android:endColor="#ffb347" ></gradient>
 </shape>
