--- a/app/src/main/res/layout/fragment_learning_leaders.xml
+++ b/app/src/main/res/layout/fragment_learning_leaders.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.view.LearningLeaders"
+    tools:context=".ui.view.FragmentLearningLeaders"
     android:padding="20dp">
 
         <androidx.recyclerview.widget.RecyclerView
