--- a/app/src/main/res/layout/fragment_skill_i_q_leaders.xml
+++ b/app/src/main/res/layout/fragment_skill_i_q_leaders.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.SkillIQLeaders"
+    tools:context=".ui.view.FragmentSkillIQLeaders"
     android:padding="20dp">
 
         <androidx.recyclerview.widget.RecyclerView
