--- a/app/src/main/res/layout/learning_recyclerview_row.xml
+++ b/app/src/main/res/layout/learning_recyclerview_row.xml
@@ -23,7 +23,7 @@
             android:layout_toRightOf="@id/top_learner_badge"
             android:textStyle="bold"
             android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -31,8 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/top_learner_name"
             android:layout_marginTop="5dp"
+            android:layout_marginLeft="16dp"
             android:id="@+id/top_learner_hours_country"
-            android:layout_marginEnd="16dp"
             android:layout_toRightOf="@+id/top_learner_badge"/>
 
     </RelativeLayout>
