--- a/app/src/main/res/layout/skill_iq_recyclerview_row.xml
+++ b/app/src/main/res/layout/skill_iq_recyclerview_row.xml
@@ -22,16 +22,16 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/skill_iq_leader_badge"
             android:textStyle="bold"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="16dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:id="@+id/skill_iq_score_and_country"
             android:layout_below="@+id/skill_iq_leader_name"
-            android:layout_marginStart="16dp"
             android:layout_toRightOf="@+id/skill_iq_leader_badge"/>
 
     </RelativeLayout>
