--- a/app/src/main/res/layout/activity_project_submission.xml
+++ b/app/src/main/res/layout/activity_project_submission.xml
@@ -45,7 +45,6 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="@string/project_submission"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                 android:textColor="@color/main"
                 android:textSize="22sp" />
         </RelativeLayout>
@@ -59,8 +58,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/proj_submit_box"
-        android:hint="@string/full_name"
-        android:inputType="textPersonName"
+        android:hint="@string/first_name"
+        android:inputType="textCapSentences"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:autofillHints=""
@@ -75,7 +74,7 @@
         android:layout_marginRight="16dp"
         android:background="@drawable/proj_submit_box"
         android:hint="@string/last_name"
-        android:inputType="textPersonName"
+        android:inputType="textCapSentences"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:autofillHints=""
@@ -105,7 +104,7 @@
         android:layout_marginTop="52dp"
         android:background="@drawable/proj_submit_box"
         android:hint="@string/project_on_github_link"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:autofillHints=""
